plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.3'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.pinkward'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
    // thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

    // Junit : 기본버전
    // 문제 생겨서 기본버전으로 두었음
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'

    // slf4j
    implementation 'org.slf4j:slf4j-api:2.0.6'

    // logback
    implementation 'ch.qos.logback:logback-classic:1.4.5'
    testImplementation 'ch.qos.logback:logback-classic:1.4.5'

    // 오라클 ojdbc8 라이브러리
    implementation 'com.oracle.database.jdbc:ojdbc8:21.9.0.0'

    //jackson 라이브러리
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'

    //myBatis Spring MVC
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'

    // Spring MVC 기본 모듈 (스프링 컨테이너 + Spring MVC)
    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'


    // Lombok 라이브러리
    compileOnly 'org.projectlombok:lombok:1.18.28'
    implementation 'org.projectlombok:lombok:1.18.28'
    testImplementation 'org.projectlombok:lombok:1.18.28'

    // Lombok for IntelliJ
    annotationProcessor('org.projectlombok:lombok')
    testAnnotationProcessor 'org.projectlombok:lombok'

    // Apache HttpClients
    // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'

    // Gradle 의존성
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    
    // Bean Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	
	// AOP 모듈
	implementation 'org.springframework.boot:spring-boot-starter-aop'

    // 배치 프로그램
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    implementation 'org.springframework.boot:spring-boot-starter-quartz'
    implementation 'com.h2database:h2'
    testImplementation 'org.springframework.batch:spring-batch-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
